--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -70,10 +70,25 @@ jobs:
         with:
           path: all-artifacts
       
-      - name: 创建发布
+      - name: 获取当前日期
+        id: date
+        run: echo "date=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
+      
+      - name: 创建发布 (标签触发)
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
+          files: |
+            all-artifacts/**/*
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          
+      - name: 创建发布 (手动触发)
+        uses: softprops/action-gh-release@v1
+        if: github.event_name == 'workflow_dispatch'
+        with:
+          tag_name: auto-build-${{ steps.date.outputs.date }}
+          name: 自动构建 ${{ steps.date.outputs.date }}
           files: |
             all-artifacts/**/*
         env:
