--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "start": "electron . --no-sandbox --disable-dev-shm-usage",
     "dev": "electron . --inspect --no-sandbox --disable-dev-shm-usage",
     "test": "electron@14.2.9 . --no-sandbox --disable-dev-shm-usage",
-    "build": "electron-builder --linux --dir=false",
-    "build:win": "electron-builder --win --dir=false",
-    "build:mac": "electron-builder --mac --dir=false",
+    "build": "npm run clean && electron-builder --linux --dir=false",
+    "build:win": "npm run clean && electron-builder --win --dir=false",
+    "build:mac": "npm run clean && electron-builder --mac --dir=false",
+    "build:all": "npm run clean && electron-builder -mwl --dir=false",
+    "build:fast": "npm run clean && electron-builder --linux --dir=false --publish=never",
+    "clean": "rimraf dist",
+    "pack": "electron-builder --dir",
     "simple": "node -e \"const { execSync } = require('child_process'); try { console.log('Starting Electron app...'); execSync('electron . --no-sandbox', { stdio: 'inherit' }); } catch (e) { console.error('Failed to start Electron app:', e); }\"",
     "direct": "electron direct-main.js --no-sandbox"
   },
@@ -28,16 +32,23 @@
   },
   "devDependencies": {
     "electron": "^23.1.3",
-    "electron-builder": "^23.6.0"
+    "electron-builder": "^23.6.0",
+    "rimraf": "^6.0.1"
   },
   "build": {
     "appId": "com.multiaccount.browser",
     "productName": "Multi Account Browser",
     "directories": {
-      "output": "dist"
+      "output": "dist",
+      "buildResources": "build-resources"
     },
     "npmRebuild": false,
     "nodeGypRebuild": false,
+    "asar": true,
+    "asarUnpack": [
+      "node_modules/playwright*/**/*"
+    ],
+    "compression": "maximum",
     "artifactName": "${productName}-${version}.${ext}",
     "files": [
       "**/*",
@@ -54,19 +65,45 @@
       "!**/{npm-debug.log,yarn.lock,.yarn-integrity,.yarn-metadata.json}"
     ],
     "win": {
-      "target": ["nsis"],
+      "target": [
+        "nsis",
+        "portable"
+      ],
       "artifactName": "${productName}-${version}.${ext}",
-      "publish": null
+      "publish": null,
+      "icon": "build-resources/icon.ico",
+      "signingHashAlgorithms": [
+        "sha256"
+      ],
+      "verifyUpdateCodeSignature": false
     },
     "mac": {
-      "target": ["dmg"],
+      "target": [
+        "dmg",
+        "zip"
+      ],
       "artifactName": "${productName}-${version}.${ext}",
-      "publish": null
+      "publish": null,
+      "icon": "build-resources/icon.icns",
+      "hardenedRuntime": true,
+      "gatekeeperAssess": false,
+      "darkModeSupport": true
     },
     "linux": {
-      "target": ["AppImage"],
+      "target": [
+        "AppImage",
+        "deb",
+        "rpm"
+      ],
       "artifactName": "${productName}-${version}.${ext}",
-      "publish": null
+      "publish": null,
+      "icon": "build-resources/icon.png",
+      "category": "Utility",
+      "desktop": {
+        "Name": "多账号浏览器",
+        "Comment": "多账号浏览器管理工具，支持独立指纹和代理设置",
+        "Categories": "Utility;Network;WebBrowser;"
+      }
     }
   }
 }
