--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,11 +2,11 @@ name: 构建多平台安装包
 
 on:
   push:
-    tags:
-      - 'v*'
     branches:
       - main
       - release/*
+    tags:
+      - 'v*'
   pull_request:
     branches:
       - main
@@ -16,6 +16,12 @@ on:
         description: '版本号 (例如: 1.0.0)'
         required: false
         default: 'auto'
+
+permissions:
+  contents: write
+  packages: write
+  issues: write
+  pull-requests: write
 
 jobs:
   build-linux:
