--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bootstrap": "^5.2.3",
     "electron-store": "^8.2.0",
     "express": "^4.18.2",
+    "https-proxy-agent": "^7.0.2",
     "playwright": "^1.40.0",
     "socks-proxy-agent": "^7.0.0",
     "uuid": "^9.0.0",
@@ -50,7 +51,9 @@
     "nodeGypRebuild": false,
     "asar": true,
     "asarUnpack": [
-      "node_modules/playwright*/**/*"
+      "node_modules/playwright*/**/*",
+      "node_modules/https-proxy-agent/**/*",
+      "node_modules/socks-proxy-agent/**/*"
     ],
     "compression": "maximum",
     "artifactName": "${productName}-${version}.${ext}",
