--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -226,9 +226,13 @@ jobs:
           echo "## 中文 | [English](#multi-account-browser-v${{ steps.get_version.outputs.version }})" >> CHANGELOG.md
           echo "" >> CHANGELOG.md
           echo "### 更新内容" >> CHANGELOG.md
-          echo "- 使用 Playwright 统一管理所有浏览器（Chrome、Edge、Firefox、Safari）" >> CHANGELOG.md
+          echo "- 优化了日志输出，减少了不必要的控制台信息" >> CHANGELOG.md
+          echo "- 减少了各个浏览器适配器（Chrome、Edge、Firefox、Safari）中的不必要日志输出" >> CHANGELOG.md
+          echo "- 减少了浏览器管理器中的不必要日志输出" >> CHANGELOG.md
+          echo "- 修复了前端无法获取浏览器实例状态常量的问题" >> CHANGELOG.md
+          echo "- 在 preload.js 中添加了 get-instance-status-constants 到有效通道白名单中" >> CHANGELOG.md
+          echo "- 在 app.js 中添加了默认的浏览器实例状态常量" >> CHANGELOG.md
           echo "- 修复了浏览器实例的启动和关闭问题" >> CHANGELOG.md
-          echo "- 实现了用户数据目录清理功能，防止锁文件问题" >> CHANGELOG.md
           echo "- 修正了浏览器实例状态判断逻辑" >> CHANGELOG.md
           echo "- 改进了用户界面，使运行中的配置项背景色变为浅蓝色" >> CHANGELOG.md
           echo "- 修复了Cookie管理功能的连接问题" >> CHANGELOG.md
@@ -248,9 +252,13 @@ jobs:
           echo "## English | [中文](#多账号浏览器-v${{ steps.get_version.outputs.version }})" >> CHANGELOG.md
           echo "" >> CHANGELOG.md
           echo "### Updates" >> CHANGELOG.md
-          echo "- Unified browser management with Playwright for all browsers (Chrome, Edge, Firefox, Safari)" >> CHANGELOG.md
+          echo "- Optimized log output, reducing unnecessary console information" >> CHANGELOG.md
+          echo "- Reduced unnecessary log output in browser adapters (Chrome, Edge, Firefox, Safari)" >> CHANGELOG.md
+          echo "- Reduced unnecessary log output in browser manager" >> CHANGELOG.md
+          echo "- Fixed issue where frontend couldn't retrieve browser instance status constants" >> CHANGELOG.md
+          echo "- Added 'get-instance-status-constants' to valid channels whitelist in preload.js" >> CHANGELOG.md
+          echo "- Added default browser instance status constants in app.js" >> CHANGELOG.md
           echo "- Fixed browser instance startup and shutdown issues" >> CHANGELOG.md
-          echo "- Implemented user data directory cleanup to prevent lock file issues" >> CHANGELOG.md
           echo "- Fixed browser instance status detection logic" >> CHANGELOG.md
           echo "- Improved UI with light blue background for running configurations" >> CHANGELOG.md
           echo "- Fixed Cookie management connection issues" >> CHANGELOG.md
