--- a/extensions/fingerprint-defender/manifest.json
+++ b/extensions/fingerprint-defender/manifest.json
@@ -1,6 +1,7 @@
 {
   "name": "指纹防护",
   "version": "1.0",
+  "manifest_version":2,
   "description": "保护浏览器指纹，防止被跟踪",
   "permissions": [
     "webRequest",
